--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -41,6 +41,7 @@ jobs:
       - name: Create tag
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.RELEASE_TOKEN }}
           script: |
             github.rest.git.createRef({
               owner: context.repo.owner,
