--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -9,7 +9,7 @@ on:
       # - '.github/**'
       - 'docs/**'
       - 'assets/**'
-      - '*.yml'
+      # - '*.yml'
       - '*.json'
       - '*.config'
       - '*.md'
