--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -38,6 +38,18 @@ jobs:
           echo "prev_build_version=${{ env.RYUJINX_BASE_VERSION }}.$((${{ github.run_number }} - 1))" >> $GITHUB_OUTPUT
         shell: bash
 
+      - name: Get SHA from another repository
+        id: get_sha
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { data } = await github.rest.repos.getCommit({
+              owner: "${{ env.OTHER_REPO_OWNER }}",
+              repo: "${{ env.OTHER_REPO_NAME }}",
+              ref: "main"  # 或者你可以指定其他分支或 commit SHA
+            });
+            return data.sha;
+
       - name: Create tag
         uses: actions/github-script@v7
         with:
@@ -46,7 +58,7 @@ jobs:
               owner: "${{ env.RYUJINX_TARGET_RELEASE_CHANNEL_OWNER }}",
               repo: "${{ env.RYUJINX_TARGET_RELEASE_CHANNEL_SOURCE_REPO }}",
               ref: 'refs/tags/Canary-${{ steps.version_info.outputs.build_version }}',
-              sha: context.sha
+              sha: "${{ steps.get_sha.outputs.result }}"
             })
           github-token: ${{ secrets.RELEASE_TOKEN }}
 
